# golem-llm

./: Cargo.toml
llm/exec-js/: Cargo.toml
llm/exec-js/src/: bindings.rs  lib.rs
llm/exec-js/tests/: integration_test.rs
llm/exec-js/wit/: golem-exec.wit
llm/exec-py/: Cargo.toml
llm/exec-py/src/: lib.rs
llm/exec-py/tests/: integration_test.rs
llm/wit/: golem-exec.wit
search/algolia/: Cargo.toml  search-algolia.wasm
search/algolia/src/: bindings.rs  client.rs  error.rs  lib.rs  utils.rs
search/algolia/wit/: algolia.wit
search/elastic/: Cargo.toml  search-elastic.wasm
search/elastic/src/: bindings.rs  client.rs  config.rs  error.rs  lib.rs  utils.rs
search/elastic/wit/: elastic.wit
search/meilisearch/: Cargo.toml  build.rs  search-meilisearch.wasm
search/meilisearch/src/: bindings.rs  client.rs  error.rs  lib.rs  utils.rs
search/meilisearch/wit/: meilisearch.wit
search/opensearch/: Cargo.toml
search/opensearch/src/: bindings.rs  client.rs  error.rs  lib.rs  utils.rs
search/opensearch/wit/: opensearch.wit
search/typesense/: Cargo.toml  search-typesense.wasm
search/typesense/src/: bindings.rs  client.rs  error.rs  lib.rs  utils.rs
search/typesense/wit/: deps.toml  typesense.wit
